@@ -17,21 +17,26 @@
 #ifndef IPODWRITEDATABASEJOB_H
 #define IPODWRITEDATABASEJOB_H
 
-#include "IpodCollection.h"
-
 #include <ThreadWeaver/Job>
 
+class IpodCollection;
 
+/**
+ * A job designed to call IpodCollection::writeDatabase() in a thread so that main
+ * thread is not blocked with it. It is guaranteed by IpodCollection that is doesn't
+ * destory itself while this job is alive. Memory management of this job is up to
+ * the caller of it.
+ */
 class IpodWriteDatabaseJob : public ThreadWeaver::Job
 {
     Q_OBJECT
 
     public:
-        explicit IpodWriteDatabaseJob( const QWeakPointer<IpodCollection> &collection );
+        explicit IpodWriteDatabaseJob( IpodCollection *collection );
         virtual void run();
 
     private:
-        QWeakPointer<IpodCollection> m_coll;
+        IpodCollection *m_coll;
 };
 
 #endif // IPODWRITEDATABASEJOB_H
